src/index.css
.login-container {
  max-width: 900px;
  height: 100vh;
}
.logo {
  width: 300px;
}

.login-box {
  background-image: linear-gradient(
    130deg,
    rgb(240, 161, 42) 35%,
    rgb(240, 82, 193) 100%
  );
  object-fit: contain;
  background-position: center;
  border-radius: 7px 0 0 7px;
}

.text {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-style: normal;
}
.title {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: italic;
}
.image-title {
  font-family: "Roboto", serif;
  font-weight: 200;
  font-style: italic;
  bottom: 30px;
  width: 300px;
}

.list-credentials {
  list-style: none;
}

.form-column {
  border-radius: 0 7px 7px 0;
}

.form-check-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

a.text-decoration-none {
  text-decoration: none;
  color: #06021f;
}

.carousel-img {
  height: 220px;
}

.credentials-container {
  filter: opacity(0.9);
}

.send-info-container {
  padding-left: 12px;
  padding-right: 12px;
  background: rgb(25, 27, 26);
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

#video-vibraco {
  filter: brightness(0.5);
  width: 100%;
  height: 550px;
  object-fit: cover;
  object-position: center center;
}

.gif-container {
  height: 370px;
}

#gif-vibraco {
  width: 100%;
  height: 370px;
  object-fit: cover;
  object-position: center center;
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.producto-lista {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 20px;
  justify-items: center;
  margin-top: 20px;
}

.cardComp {
  width: 15rem;
  transition: border-color 0.3s ease;
}

.cardBtn:hover {
  background: rgba(254, 94, 13, 0.887) !important;
}

.img-icons {
  width: 70px;
}

.img-vercel-icon {
  width: 140px;
}
.cart-btn {
  border: none;
  border-radius: 5px;
  background-color: lightgrey;
}
.links-navbar-container {
  font-size: 17px;
  text-decoration: none;
  transition: transform 0.3s ease;
}

.links-navbar-container:hover {
  color: #599de5;
}

.home-logo {
  width: 80px;
  margin-left: -12px;
}

.buyList {
  list-style: none;
}

.cartTitle {
  width: 100%;
}

.btnBuy {
  height: 50vh;
}

.video-section {
  position: relative;
}
.text-video {
  position: absolute;
  top: 50%;
  bottom: 50%;
  right: 50%;
  left: 50%;
  color: white;
  width: 500px;
  transform: translate(-50%, -11.75rem);
}

.logo-video {
  width: 350px;
}

.title-video {
  font-size: 2.3rem;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-style: italic;
}

.carousel-container {
  width: 95%;
}

@media screen and (max-width: 992px) {
  .pickup-col {
    border-top: 2px solid white;
  }
}

@media screen and (min-width: 992px) {
  .pickup-col {
    border-left: 2px solid white;
  }
}

.cartBtn {
  color: rgb(79, 81, 79);
  font-size: 20px;
  font-weight: bold;
}

.shippingNav {
  font-size: 13px;
  padding-left: 25px;
}
.msg-container {
  background: rgb(25, 27, 26);
}
.cards-section {
  overflow: hidden;
}

.product-quantity-input {
  width: 25px;
  text-align: center;
  margin: 0px;
  border-radius: 5px;
  border: 1px solid grey;
}

.footer {
  background: rgb(25, 27, 26);
}

.container-about-us {
  width: 100%;
  height: 70vh;
  position: relative;
  background-image: url(https://tfistefyeywtnpgklclp.supabase.co/storage/v1/object/public/images/about-us-image.jpg);
}

.about-us-text {
  animation: fade-up 2.5s;
  position: absolute;
  top: 20%;
  left: 3%;
  max-width: 700px;
}
.about-us-title {
  font-size: 4rem;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-style: italic;
}

@keyframes fade-up {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.ws-back {
  background: rgb(25, 27, 26);
}
.btnPlusMin {
  height: 26px;
  width: 30px;
}

.btnBuyCart {
  background: rgba(254, 94, 13, 0.887) !important;
}

.bgCartTitle {
  background: linear-gradient(
    200deg,
    rgba(240, 136, 10, 0.8) 20%,
    rgba(180, 19, 198, 0.8) 80%
  ) !important;
}

.naturales {
  background: linear-gradient(
    200deg,
    rgba(240, 136, 10, 0.75) 20%,
    rgba(180, 19, 198, 0.75) 80%
  ) !important;
  color: white;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.navbarGlobal {
  position: sticky;
  top: 0; /* Fija la barra en la parte superior */
  z-index: 1000; /* Asegura que esté encima de otros elementos */
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra sutil */
}

.btnBuscar {
  background: rgb(230, 229, 227) !important;
}

.info&cards {
  margin-top: 20px !important;
}

.btnSubmit {
  color: white;
  background-color: rgba(254, 94, 13, 0.887) !important;
  border: none;
}
.imgJuices {
  max-height: 327px;
}

.freeze {
  background: linear-gradient(
    160deg,
    rgba(240, 136, 10, 0.8) 20%,
    rgba(180, 19, 198, 0.8) 80%
  ) !important;
  color: white;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.freezeTitle {
  padding-top: 27%;
}

.search {
  position: relative;
}

.inputSearch {
  position: absolute;
  top: -125px;
}

.juicesImgCol {
  overflow: hidden;
}

.NavbarLink {
  font-size: 14px;
  text-decoration: none;
  color: rgb(12, 1, 1) !important;
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: italic;
  transition: color 0.3s ease;
}

.NavbarLink2 {
  font-size: 17px;
  text-decoration: none;
  color: rgb(21, 2, 2) !important;
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: italic;
  transition: color 0.3s ease;
}

.NavbarLink:hover {
  transform: scale(1.2);
  transition: 200ms;
  color: rgb(249, 161, 19);
}
.NavbarLink2:hover {
  transform: scale(1.1);
  transition: 200ms;
}

.bannerText {
  font-size: 15px;
}
.bannerText2 {
  font-size: 15px;
}

@media (max-width: 990px) {
  .bannerText {
    font-size: 11px;
  }

  .bannerText2 {
    font-size: 11px;
  }
  .inputSearch {
    position: absolute;
    top: 20px;
  }
  .juicesConatainer {
    margin-top: 20px;
  }
  .juicesImgCol {
    width: 0px;
  }
  .freezeTitle {
    padding-top: 40%;
  }
}

@media (max-width: 770px) {
  .inputSearch {
    width: 200px;
  }
}
@media (min-width: 1000px) and (max-width: 1220px) {
  .freezeTitle {
    padding-top: 35%;
  }
}
@media (min-width: 1220px) and (max-width: 1400px) {
  .freezeTitle {
    padding-top: 34%;
  }
}
.modalDelItemBtn {
  background-color: rgba(182, 180, 179, 0.887) !important;
  border: none !important;
  height: 35px;
  margin-top: 20px !important;
}

.closeModalDel {
  color: rgba(254, 94, 13, 0.887) !important;
  font-weight: 600;
  height: 80px;
}
.btnRegresar {
  border: none;
  background-color: rgba(254, 94, 13, 0.887) !important;
  margin-left: auto;
  margin-right: auto;
}

